--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
     <a href="#section2" onclick="showSection('section2')">2. Треугольники</a>
     <a href="#section3" onclick="showSection('section3')">3. Прямоугольные треугольники</a>
     <a href="#section4" onclick="showSection('section4')">4. Четырёхугольники</a>
+    <a href="#section5" onclick="showSection('section5')">5. Окружность и круг</a>
+
+    <a href="#section6" onclick="showSection('section6')">6. Векторы</a>
+
 
 </nav>
 
@@ -315,6 +319,111 @@
         <h2>4.7. Свойства вписанных и описанных четырёхугольников</h2>
         <p><strong>Вписанный четырёхугольник:</strong> Сумма противоположных углов равна 180°.</p>
         <p><strong>Описанный четырёхугольник:</strong> Сумма длин противоположных сторон равна.</p>
+    </div>
+    
+        <!-- Окружность и круг -->
+    <div id="section5" class="hidden">
+        <h2>5.1. Касательная к окружности: определение, её свойство</h2>
+        <p><strong>Определение:</strong> Касательная — это прямая, которая касается окружности в одной точке.</p>
+        <p><strong>Свойство:</strong> Касательная перпендикулярна радиусу, проведённому в точку касания.</p>
+
+        <h2>5.2. Свойство отрезков касательных</h2>
+        <p><strong>Свойство:</strong> Отрезки касательных, проведённые из одной точки к окружности, равны между собой.</p>
+
+        <h2>5.3. Центральный угол: определение и свойства</h2>
+        <p><strong>Определение:</strong> Центральный угол — это угол, вершина которого находится в центре окружности, а стороны проходят через две точки на окружности.</p>
+        <p><strong>Свойства:</strong></p>
+        <ul>
+            <li>Центральный угол измеряется в градусах.</li>
+            <li>Его величина равна углу, который образуют две хорды.</li>
+        </ul>
+
+        <h2>5.4. Вписанные углы: определение и свойства</h2>
+        <p><strong>Определение:</strong> Вписанный угол — это угол, вершина которого находится на окружности, а стороны — это хорды окружности.</p>
+        <p><strong>Свойства:</strong></p>
+        <ul>
+            <li>Вписанный угол в два раза меньше центрального угла, заключённого между теми же хордами.</li>
+            <li>Вписанные углы, опирающиеся на одну и ту же хорду, равны.</li>
+        </ul>
+
+        <h2>5.5. Длина окружности</h2>
+        <p><strong>Формула:</strong></p>
+        <p>
+            \( L = 2 \pi r \), где \( r \) — радиус окружности.
+        </p>
+
+        <h2>5.6. Площадь круга</h2>
+        <p><strong>Формула:</strong></p>
+        <p>
+            \( S = \pi r^2 \), где \( r \) — радиус окружности.
+        </p>
+
+        <h2>5.7. Площадь кругового сектора</h2>
+        <p><strong>Формула:</strong></p>
+        <p>
+            \( S = \frac{\alpha}{360^\circ} \cdot \pi r^2 \), где \( \alpha \) — центральный угол сектора в градусах.
+        </p>
+
+        <h2>5.8. Уравнения окружности</h2>
+        <p><strong>Общее уравнение окружности:</strong> \( (x - a)^2 + (y - b)^2 = r^2 \), где \( (a, b) \) — координаты центра, \( r \) — радиус.</p>
+
+        <h2>5.9. Формулы для правильных многоугольников</h2>
+        <p><strong>Площадь правильного многоугольника:</strong> \( S = \frac{n \cdot a^2}{4 \cdot \tan(\frac{\pi}{n})} \), где \( n \) — количество сторон, \( a \) — длина стороны.</p>
+        <p><strong>Радиус вписанной окружности:</strong> \( r = \frac{a}{2 \cdot \tan(\frac{\pi}{n})} \)</p>
+        <p><strong>Угол при вершине:</strong> \( \theta = \frac{360^\circ}{n} \)</p>
+        <p><strong>Сумма углов многоугольника:</strong> \( \text{Sum of angles} = 180^\circ \cdot (n - 2) \)</p>
+    </div>
+
+        <!-- Векторы -->
+    <div id="section6" class="hidden">
+        <h2>6.1. Угол между векторами</h2>
+        <p><strong>Определение:</strong> Угол между двумя векторами \( \vec{a} \) и \( \vec{b} \) можно найти по формуле:</p>
+        <p>
+            \( \cos \theta = \frac{\vec{a} \cdot \vec{b}}{|\vec{a}| \cdot |\vec{b}|} \)
+        </p>
+
+        <h2>6.2. Коллинеарные векторы. Свойство их координат</h2>
+        <p><strong>Определение:</strong> Векторы называются коллинеарными, если они направлены вдоль одной прямой или параллельны.</p>
+        <p><strong>Свойство:</strong> Векторы \( \vec{a} \) и \( \vec{b} \) коллинеарны, если существует число \( k \), такое что \( \vec{a} = k \cdot \vec{b} \).</p>
+
+        <h2>6.3. Разложение векторов по двум неколлинеарным векторам</h2>
+        <p><strong>Определение:</strong> Вектор можно разложить на два компонента, которые направлены вдоль неколлинеарных векторов \( \vec{a} \) и \( \vec{b} \).</p>
+        <p><strong>Формула разложения:</strong></p>
+        <p>
+            \( \vec{r} = \lambda \cdot \vec{a} + \mu \cdot \vec{b} \), где \( \lambda \) и \( \mu \) — скаляры.
+        </p>
+
+        <h2>6.4. Правила сложения векторов</h2>
+        <p><strong>Правило параллелограмма:</strong> Для двух векторов \( \vec{a} \) и \( \vec{b} \), сумма векторов равна диагонали параллелограмма, построенного на этих векторах.</p>
+        <p><strong>Правило треугольника:</strong> Для двух векторов \( \vec{a} \) и \( \vec{b} \), сумма векторов — это результат последовательного их соединения в треугольник.</p>
+
+        <h2>6.5. Правила вычитания векторов</h2>
+        <p><strong>Правило:</strong> Вычитание векторов \( \vec{a} - \vec{b} \) можно интерпретировать как сложение вектора \( \vec{a} \) с вектором \( -\vec{b} \).</p>
+
+        <h2>6.6. Координаты вектора: определение, формула</h2>
+        <p><strong>Определение:</strong> Координаты вектора в пространстве определяются как разности координат его конечной точки и начальной точки.</p>
+        <p><strong>Формула:</strong> \( \vec{v} = (x_2 - x_1, y_2 - y_1) \) для двумерного пространства.</p>
+
+        <h2>6.7. Формулы для нахождения:</h2>
+        <p><strong>Координаты равных векторов:</strong> Если \( \vec{a} = \vec{b} \), то их координаты равны: \( (x_1, y_1) = (x_2, y_2) \).</p>
+        <p><strong>Координаты суммы и разности векторов:</strong> \( \vec{c} = \vec{a} + \vec{b} = (x_1 + x_2, y_1 + y_2) \) и \( \vec{d} = \vec{a} - \vec{b} = (x_1 - x_2, y_1 - y_2) \).</p>
+        <p><strong>Координаты произведения вектора на число:</strong> \( k \cdot \vec{a} = (k \cdot x_1, k \cdot y_1) \).</p>
+        <p><strong>Координаты середины отрезка:</strong> Середина отрезка, соединяющего точки с координатами \( (x_1, y_1) \) и \( (x_2, y_2) \), имеет координаты:  
+            \( \left( \frac{x_1 + x_2}{2}, \frac{y_1 + y_2}{2} \right) \).
+        </p>
+        <p><strong>Координаты длины вектора:</strong> Длина вектора \( \vec{a} = (x_1, y_1) \) вычисляется по формуле:  
+            \( |\vec{a}| = \sqrt{x_1^2 + y_1^2} \).
+        </p>
+
+        <h2>6.8. Скалярное произведение векторов, определение</h2>
+        <p><strong>Определение:</strong> Скалярное произведение двух векторов \( \vec{a} \) и \( \vec{b} \) определяется как:  
+            \( \vec{a} \cdot \vec{b} = |\vec{a}| \cdot |\vec{b}| \cdot \cos \theta \), где \( \theta \) — угол между векторами.</p>
+
+        <h2>6.9. Скалярное произведение векторов в координатах. Условие перпендикулярности векторов</h2>
+        <p><strong>Скалярное произведение векторов в координатах:</strong> Если \( \vec{a} = (a_1, a_2) \) и \( \vec{b} = (b_1, b_2) \), то их скалярное произведение равно:  
+            \( \vec{a} \cdot \vec{b} = a_1 \cdot b_1 + a_2 \cdot b_2 \).</p>
+        <p><strong>Условие перпендикулярности:</strong> Два вектора перпендикулярны, если их скалярное произведение равно нулю:  
+            \( \vec{a} \cdot \vec{b} = 0 \).</p>
     </div>
 
 </div>
