--- a/index.html
+++ b/index.html
@@ -45,6 +45,27 @@
         .hidden {
             display: none;
         }
+        nav {
+    display: flex;
+    justify-content: flex-start;
+    background-color: #333;
+    overflow-x: auto;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch; /* Плавная прокрутка на iOS */
+}
+
+nav a {
+    color: white;
+    padding: 14px 20px;
+    text-decoration: none;
+    display: block;
+    flex-shrink: 0; /* Предотвращает сжатие элементов */
+}
+
+nav a:hover {
+    background-color: #4CAF50;
+}
+
     </style>
 
     <script>
